2009-04-09 Pierre Wieser <pwieser@trychlos.org>

	* src/io-gconf/nagp-writer.c (nagp_iio_provider_delete_item):
	Also delete the schema names which may be embedded in GConfEntry.

	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-utils.c (na_gconf_utils_dump_entries):
	New function.

	* src/io-gconf/nagp-reader.c (read_item):
	Dump content of readen entries.

	* src/io-gconf/nagp-gconf-provider.c (install_monitors):
	Also monitors schemas to be triggered when importing a schema.

	* configure.ac: Bump version number for release.

	* src/nact/nact-iaction-tab.c (on_icon_browse):
	Save current position and folder of icon chooser.

2009-04-08 Pierre Wieser <pwieser@trychlos.org>

	* src/core/na-object-profile.c (is_valid_path_parameters):
	Only check for non-empty path+parameters (fix #614596).

	* src/nact/nact-sort-buttons.c (on_sort_down_button_toggled,
	on_sort_manual_button_toggled, on_sort_up_button_toggled):
	Do not let the user click twice on a sort button.

	* src/nact/nact-main-window.c (setup_dialog_title):
	Review/normalize debug entry message.

	* src/nact/nact-ifolders-tab.c (on_add_folder_clicked):
	Folders list is definitively a list of paths (not URI).

	* src/api/na-core-utils.h:
	* src/core/na-core-utils.c (na_core_utils_str_collate): New function.

	* src/core/na-data-boxed.c (locale_are_equal):
	* src/core/na-object-action.c (deals_with_toolbar_label):
	* src/core/na-object-id.c (na_object_id_sort_alpha_asc):
	* src/io-desktop/nadp-utils.c (nadp_utils_gslist_remove_from):
	* src/nact/base-builder.c (already_loaded): Updated accordingly.

	* src/api/na-gconf-utils.h:
	* src/core/na-gconf-utils.c (na_gconf_utils_has_entry):
	Check for an entry in the previously loaded list.

	* src/io-gconf/nagp-reader.c
	(read_item): First check for Type default value.
	(read_item, read_done_item_is_writable,
	read_done_action_load_profile): Load entries.

	* src/nact/nact-iaction-tab.c (on_tab_updatable_selection_changed):