@@ -1,5 +1,8 @@
 2009-04-09 Pierre Wieser <pwieser@trychlos.org>
 
+	* src/nact/nact-sort-buttons.c (set_new_sort_order):
+	Do not rewrite in GConf a just-readen sort order.
+
 	* src/io-gconf/nagp-writer.c (nagp_iio_provider_delete_item):
 	Also delete the schema names which may be embedded in GConfEntry.
 
